[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -259.0
margin_top = -87.5
margin_right = 259.0
margin_bottom = 87.5
color = Color( 0.317647, 0.172549, 0.054902, 0.113725 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
margin_left = 35.0
margin_top = 40.0
margin_right = 485.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="Background/VBoxContainer"]
margin_right = 450.0
margin_bottom = 48.0
text = "Controls:
Space - Activate jetpack
Escape - Menu"

[node name="Start" type="Button" parent="Background/VBoxContainer"]
margin_top = 52.0
margin_right = 450.0
margin_bottom = 72.0
text = "Start game"

[node name="MainMenu" type="Button" parent="Background/VBoxContainer"]
margin_top = 76.0
margin_right = 450.0
margin_bottom = 96.0
text = "Return to main menu"

[node name="Quit" type="Button" parent="Background/VBoxContainer"]
margin_top = 100.0
margin_right = 450.0
margin_bottom = 120.0
text = "Quit game"

[connection signal="pressed" from="Background/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
